# SEG-Y_Batch_Inspector_-_Fixer

./: .gitignore  README.md  pyproject.toml  run_gui.py
.github/workflows/: ci.yml
examples/: trace_header_example.csv
segy_toolbox/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py
segy_toolbox/core/: binary_editor.py  ebcdic_editor.py  engine.py  expression.py  trace_editor.py  validator.py
segy_toolbox/gui/: app.py  i18n.py  theme.qss  workers.py
segy_toolbox/gui/panels/: batch_panel.py  binary_panel.py  ebcdic_panel.py  file_panel.py  log_panel.py  overview_panel.py  trace_edit_builder.py  trace_edit_queue.py  trace_field_inspector.py  trace_panel.py  validation_panel.py
segy_toolbox/io/: ebcdic.py  reader.py  writer.py
segy_toolbox/reporting/: changelog.py  excel_report.py
tests/: conftest.py  test_changelog.py  test_config.py  test_ebcdic.py  test_editors.py  test_expression.py  test_i18n.py  test_logging.py  test_models.py  test_validator.py
